--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   cloudinary: ^1.2.0
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
+  flutter_map_marker_popup: ^7.0.0
+  location: ^7.0.1
 
 dev_dependencies:
   flutter_test:
