--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   latlong2: ^0.9.1
   flutter_map_marker_popup: ^7.0.0
   location: ^7.0.1
+  flutter_map_directions: ^0.0.8
+  geolocator: ^13.0.2
+  flutter_typeahead: ^5.2.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
