--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   geolocator: ^13.0.2
   flutter_typeahead: ^5.2.0
   geocoding: ^3.0.0
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
