--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   geocoding: ^3.0.0
   vector_math: ^2.1.4
+  flutter_tts: ^4.2.1
 
 dev_dependencies:
   flutter_test:
