--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   geocoding: ^3.0.0
   vector_math: ^2.1.4
   flutter_tts: ^4.2.1
+  device_info_plus: ^11.2.0
 
 dev_dependencies:
   flutter_test:
