bus journey monitoring

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_tts: ^4.2.1
   device_info_plus: ^11.2.0
   cached_network_image: ^3.4.1
+  firebase_database: ^11.3.2
 
 dev_dependencies:
   flutter_test:
