--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   device_info_plus: ^11.2.0
   cached_network_image: ^3.4.1
   firebase_database: ^11.3.2
+  intl: ^0.19.0
+  fl_chart: ^0.70.2
+  
 
 dev_dependencies:
   flutter_test:
