--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   get: ^4.6.6
   flutter_svg: ^2.0.14
   google_fonts: ^6.2.1
-  fl_country_code_picker: ^0.1.9+1
-  pinput: ^5.0.0
+  # fl_country_code_picker: ^0.1.9+1
+  # pinput: ^5.0.0
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
   image_picker: ^1.1.2
